--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,42 +1,44 @@
 name: Deploy to GitHub Pages
 
-# Trigger workflow on push to the main branch
 on:
   push:
     branches:
-      - main  # Or your default branch if different
+      - main
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment and don't cancel in-progress runs
 concurrency:
   group: "pages"
-  cancel-in-progress: true  # Change this to true for faster deployment if you want to cancel older runs
+  cancel-in-progress: true
 
 jobs:
   deploy:
-    environment: github-pages
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js (optional, if needed for your project)
+    - name: Setup Node.js (if needed)
       uses: actions/setup-node@v5
       with:
-        node-version: '16'  # Specify your Node.js version if you need it
+        node-version: '16'  # Adjust if you need a different version
+
+    - name: Install dependencies (for build)
+      run: npm install  # This is for sites needing npm dependencies (adjust as necessary)
+
+    - name: Build site (if needed)
+      run: npm run build  # Adjust based on your site build process
 
     - name: Upload artifact for GitHub Pages deployment
       uses: actions/upload-pages-artifact@v3
       with:
-        path: '.'  # Upload the entire repository or specify the folder where your build is located
+        path: './build'  # Adjust to where your built files are located
 
     - name: Deploy to GitHub Pages
-      uses: pages/github-pages-deploy-action@v2
+      uses: github/pages-deploy-action@v2  # Correct action name
       with:
-        branch: gh-pages  # Ensure you're deploying to the correct branch (gh-pages is the default for GitHub Pages)
-        folder: . # The folder where your built website files are located (e.g., 'dist', 'build', or just '.' if it's in the root)
+        branch: gh-pages  # Ensure you're deploying to the correct branch
+        folder: './build'  # Adjust to the folder containing the built site files
